logs/syntax_error_2025-04-06_15-13-57.log
[SYNTAX ERROR]   File "projects/gtk_chat_client/chat_client.py", line 1
    Here is the revised Python code:
                ^^^^^^^
SyntaxError: invalid syntax
